--- a/octoprint_TwitchTerminalCommands/templates/TwitchTerminalCommands_settings.jinja2
+++ b/octoprint_TwitchTerminalCommands/templates/TwitchTerminalCommands_settings.jinja2
@@ -4,7 +4,7 @@
         <div class="span4"><h4>{{ _('Name') }}</h4></div>
         <div class="span6"><h4>{{ _('Commands') }} <small><a href="#" data-toggle="tooltip" title="Multiple commands can be&#013;&#010;separated with a semicolon ( ; )">?</a></small></h4></div>
     </div>
-    <div data-bind="foreach: twitchTerminalCommands">
+    <div data-bind="foreach: terminalCommands">
         <div class="row-fluid" style="margin-bottom: 5px">
             <div class="span4">
                 <input type="text" class="span12" data-bind="value: name" placeholder="Name">
